src/infra/base/gateway-api-instance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.frank.lab.io"
    tls:
      mode: Terminate
      certificateRefs:
      - name: homelab-wildcard-tls # O Cert-Manager vai criar esse Secret automaticamente
    allowedRoutes:
      namespaces:
        from: All
